# rainbow

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
chromatose/: Cargo.toml
chromatose-common/: Cargo.toml
chromatose-macros/: Cargo.toml
chromatose-macros/src/: lib.rs
chromatose-shared/: Cargo.toml
chromatose/src/: colors.rs  lib.rs  lin_rgba.rs  srgb_rgba.rs
rainbow/: Cargo.toml
rainbow-macros/: Cargo.toml  README.md
rainbow-macros/src/: lib.rs
rainbow-shared/: Cargo.toml  README.md
rainbow-shared/src/: lib.rs
rainbow/examples/: conv.rs  define.rs
rainbow/src/: colors.rs  hsva.rs  lib.rs  lin_rgba.rs  srgb_rgba.rs
src/: colors.rs  lib.rs
