
[package]
name = "chromatose-macros"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
license = "LicenseRef-Brainium-Proprietary"

[lib]
proc-macro = true

[dependencies]
chromatose-shared = { version = "0.1.0", path = "../chromatose-shared" }
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = { version = "1.0.5", features = ["full"] }
