[package]
name = "chromatose"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
license = "Apache-2.0/MIT"

[dependencies]
chromatose-macros = { version = "0.1.0", path = "../chromatose-macros" }
chromatose-shared = { version = "0.1.0", path = "../chromatose-shared" }
serde = { version = "1.0.101", features = ["serde_derive"], optional = true }
uno = "0.1.0"
