[package]
name = "rainbow-macros"
version = "0.1.0"
authors = ["Brainium Studios LLC", "Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "Don't depend on this directly - rainbow proc macros"
documentation = "https://docs.rs/rainbow"
repository = "https://github.com/BrainiumLLC/rainbow"
readme = "README.md"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
rainbow-shared = { version = "0.1.0", path = "../rainbow-shared" }
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["full"] }
